# TaskAthleteTUI

./: .gitignore  Cargo.toml  LICENSE  README.md  default.nix  shell.nix
src/: main.rs
src/app/: actions.rs  data.rs  input.rs  mod.rs  navigation.rs  navigation_helpers.rs  state.rs  sync_actions.rs  utils.rs
src/app/modals/: add_workout.rs  confirm_delete_bodyweight.rs  confirm_delete_workout_set.rs  create_exercise.rs  edit_workout.rs  input_helpers.rs  log_bodyweight.rs  mod.rs  pb_modal.rs  set_target_weight.rs
src/ui/: bodyweight_tab.rs  calendar_tab.rs  graphs_tab.rs  history_tab.rs  layout.rs  log_tab.rs  mod.rs  placeholders.rs  status_bar.rs  tabs.rs  widgets.rs
src/ui/modals/: confirmation.rs  create_exercise.rs  help.rs  helpers.rs  log_bodyweight.rs  mod.rs  pb_modal.rs  set_target_weight.rs  workout.rs
