[package]
name = "task-athlete-tui"
version = "0.1.0"
edition = "2021"

[[bin]] # Explicitly define the binary name if desired
name = "ta-tui" # Or task-athlete, workout-tracker etc.
path = "src/main.rs"


[dependencies]
task-athlete-lib = { path = "../task-athlete-lib" } # Depend on the local library
ratatui = { version = "0.26.3", features = ["crossterm", "serde"] }
crossterm = "0.27.0"
anyhow = "1.0.86"
chrono = "0.4.38"
thiserror = "2.0.12"
tui-input = "0.8.0" # Example for text input handling
tracing = "0.1.41"
tokio = "1.46.1"
# rustyline = "14.0.0" # Example for input prompts
